# app_analis_bank_operation

./: .gitignore  pyproject.toml
src/views/: views.py
src/views/service/: adapters.py  period.py
tests/: test_views_service_period.py
