[tool.poetry]
name = "app-analis-bank-operation"
version = "0.1.0"
description = ""
authors = ["recently_was_good <ustinovlev039@gmail.com>"]
readme = "README.md"
packages = [{include = "app_analis_bank_operation"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
black = "^26.1.0"
mypy = "^1.19.1"
isort = "^7.0.0"
pytest = "^9.0.2"
cov = "^0.1.2"
dotenv = "^0.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
